--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,25 @@
-/* styles.css */
-
 body {
+
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+
+    justify-content: center;
+
+    height: 100vh;
+
+    margin: 0;
 
     font-family: Arial, sans-serif;
 
-    background-color: #3fffaf;
-
-    margin: 0;
-
-    padding: 0;
-
 }
 
-header {
+video, canvas {
 
-    background-color: #270833;
+    border: 1px solid #ddd;
 
-    color: #00e1ff;
-
-    padding: 37px;
-
-}
-
-nav ul {
-
-    list-style-type: none;
-
-    margin: 0;
-
-    padding: 0;
-
-}
-
-nav ul li {
-
-    display: inline;
-
-    margin-right: 70px;
-
-}
-
-nav ul li a {
-
-    color: #f3ffaf;
-
-    text-decoration: none;
-
-}
-
-main {
-
-    padding: 20px;
-
-}
-
-footer {
-
-    background-color: #333;
-
-    color: #3dffb5;
-
-    text-align: center;
-
-    padding: 10px;
-
-    position: absolute;
-
-    bottom: 0;
-
-    width: 100%;
+    margin: 10px;
 
 }
